-fix pagination for room(use remote mediator) -add repos list in detail user -add remote keys database

--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -23,6 +23,8 @@
             android:layout_marginStart="8dp"
             android:hint="@string/search_user"
             android:maxLines="1"
+            android:imeOptions="actionDone"
+            android:inputType="text"
             android:autofillHints="name"
             android:backgroundTint="@color/transparent"
             app:layout_constraintStart_toStartOf="parent"
