--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -61,10 +61,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_data"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16sp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintTop_toTopOf="@id/card_image"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/card_image"
         app:layout_constraintStart_toEndOf="@id/card_image">
 
@@ -128,5 +130,14 @@
         android:textColor="@color/grey_9B9B9B"
         app:layout_constraintStart_toEndOf="@id/card_image"
         app:layout_constraintTop_toBottomOf="@id/lbl_public_repos"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_repos"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/txv_public_repos"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/item_repos"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
